[gd_scene load_steps=9 format=3 uid="uid://dj8qffmsxxhw3"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_cv0jg"]
[ext_resource type="Texture2D" uid="uid://dwso578p6naeq" path="res://sprites/button_rectangle_depth_gradient.png" id="2_qvt1j"]
[ext_resource type="Texture2D" uid="uid://mkfg8ts3qw37" path="res://sprites/background_glacial_mountains_lightened.png" id="2_ttlih"]
[ext_resource type="Texture2D" uid="uid://cjfqdpndie4pc" path="res://sprites/button_rectangle_depth_border.png" id="3_54okt"]

[sub_resource type="SystemFont" id="SystemFont_gja2l"]

[sub_resource type="SystemFont" id="SystemFont_o1tri"]
font_weight = 450

[sub_resource type="SystemFont" id="SystemFont_nwp2x"]
font_weight = 475

[sub_resource type="LabelSettings" id="LabelSettings_l6apj"]
font = SubResource("SystemFont_nwp2x")
font_size = 50
font_color = Color(0.581828, 0.171964, 0.178795, 1)
outline_size = 5
shadow_size = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 27.0
offset_right = 19.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cv0jg")

[node name="BackgroundGlacialMountainsLightened" type="Sprite2D" parent="."]
position = Vector2(568, 296)
scale = Vector2(3.14352, 3.14352)
texture = ExtResource("2_ttlih")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -50.5
offset_right = 49.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_gja2l")
theme_override_font_sizes/font_size = 30
text = "Play"
icon = ExtResource("2_qvt1j")
icon_alignment = 1

[node name="LevelSelector" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select Level
"
icon = ExtResource("2_qvt1j")
icon_alignment = 1

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Exit"
icon = ExtResource("2_qvt1j")
icon_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 65.0
offset_right = 55.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("SystemFont_o1tri")
theme_override_font_sizes/font_size = 37
text = "Scale Gunner"
label_settings = SubResource("LabelSettings_l6apj")

[node name="ButtonRectangleDepthBorder" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(580, 105)
scale = Vector2(2.10938, 2.10938)
texture = ExtResource("3_54okt")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelector" to="." method="_on_level_selector_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
